support custom http error mapping for graphql
