# jsonschema/openapitools.schema.json
@@ -861,8 +861,46 @@
      "type": "integer",
      "maximum": 599,
      "minimum": 400,
-     "description": "HTTP error code will be used if the response body has errors.\nIf not set, forward the HTTP status from the upstream response which is usually 200 OK.",
+     "description": "The default HTTP error code will be used if the response body has errors.\nIf not set, forward the HTTP status from the upstream response which is usually 200 OK.",
      "default": 400
+    },
+    "httpErrors": {
+     "properties": {
+      "400": {
+       "type": "string",
+       "minLength": 1
+      },
+      "401": {
+       "type": "string",
+       "minLength": 1
+      },
+      "403": {
+       "type": "string",
+       "minLength": 1
+      },
+      "404": {
+       "type": "string",
+       "minLength": 1
+      },
+      "405": {
+       "type": "string",
+       "minLength": 1
+      },
+      "422": {
+       "type": "string",
+       "minLength": 1
+      },
+      "500": {
+       "type": "string",
+       "minLength": 1
+      },
+      "501": {
+       "type": "string",
+       "minLength": 1
+      }
+     },
+     "type": "object",
+     "description": "Evaluation rules to map GraphQL errors to desired HTTP status codes."
     },
     "body": {
      "$ref": "#/$defs/TemplateTransformerConfig",
@@ -918,6 +956,15 @@
     "url": {
      "type": "string",
      "description": "Overrides the request URL. Use the original request path if empty."
+    },
+    "method": {
+     "type": "string",
+     "enum": [
+      "GET",
+      "POST"
+     ],
+     "description": "Indicate the request method. The default method is POST.",
+     "default": "POST"
     },
     "headers": {
      "additionalProperties": {
